2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/version-checks.t: Don't use the '-init' import switch since it
	might abort the test.  Use '-threads-init' instead, and properly
	quote it.

	* xs/GtkTreeDnd.xs: Use gdk_atom_intern instead of
	gdk_atom_intern_static_string; the latter is only available in
	gtk+ >= 2.10.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Unstable release 1.192.

2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkLinkButton.t
	* xs/GtkLinkButton.xs: Wrap gtk_link_button_set_visited and
	gtk_link_button_get_visited.

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Fix the stack handling in the xsub for
	gtk_tree_model_get.  We need to call SPAGAIN before and PUTBACK
	after code that modifies the local stack pointer (PUSHs and XPUSHs
	for example).  Patch by Kevin Ryde.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Make Gtk2::Widget::hide_on_delete ignore excess
	arguments so that it is actually usable.  Patch by Kevin Ryde.

	* xs/GtkSelection.xs: gtk_selection_data_get_data was split up
	into gtk_selection_data_get_data and
	gtk_selection_data_get_length.  Update the wrappers accordingly.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/PangoLayout.xs: Fix a leak in the wrapper of
	pango_layout_line_get_x_ranges.  Patch by Kevin Ryde.

	* t/GtkFileChooser.t
	* t/GtkTreeView-Dnd.t: Improve the wording of the skip_all
	messages.

	* xs/GtkTreeDnd.xs: Change the wrapper for
	gtk_tree_drag_source_drag_data_get so it also accepts a selection
	data object that is to be filled in, instead of always just
	returning a new one.  Patch by Kevin Ryde.

	* t/GtkTreeView.t: Use separately created tree views for certain
	parts of the test.  Properly test set_search_equal_func and
	set_search_position_func.  Make the tests for the coordinate
	converters and for the tooltip stuff more robust.

	* xs/GtkWindow.xs: Use Gtk2::Widget::hide_on_delete in the POD.
	Patch by Kevin Ryde.
