@@ -1,5 +1,8 @@
 2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* t/GdkPixbuf.t: If saving a pixbuf in 'jpeg' format is not
+	supported, try 'png'.  Patch by Flavio Poletti.  (RT #37135)
+
 	* t/version-checks.t: Don't use the '-init' import switch since it
 	might abort the test.  Use '-threads-init' instead, and properly
 	quote it.
